--- a/src/pages/home/style.css
+++ b/src/pages/home/style.css
@@ -25,7 +25,7 @@ aside.home {
 }
 
 .home label, .home h2 {
-  text-shadow: 1vw 1vw 3vw #000, 0 0 11vw #24ff00, 0 0 4vw #24ff00, 0 0 3vw #24ff00;
+  text-shadow: 1vw 1vw 3vw #000, 0 0 11vw #000000, 0 0 4vw #000000, 0 0 3vw #070707;
 }
 
 @media (max-width: 425px) {
