--- a/src/pages/about/style.css
+++ b/src/pages/about/style.css
@@ -11,23 +11,23 @@ max-width: 80%;
 .about img {
   width: 50%;
   object-fit: contain;
-  height: max-content;
+  height: 100%;
 }
 
-@media (max-width: 2000px) {
+@media (max-width: 1280px) {
   .about img {
-  width: 50%;
+  width: 30%;
   }
 }
-@media (max-width: 1500px) {
+@media (max-width: 768px) {
   .about img {
     display: none;
-    width: 40%;
+    width: 20%;
   }
 }
-@media (max-width: 600px) {
+@media (max-width: 375px) {
   .about img {
     display: none;
-    width: 50%;
+    width: 30%;
     }
 }
