--- a/src/pages/about/style.css
+++ b/src/pages/about/style.css
@@ -9,10 +9,15 @@ max-width: 80%;
 }
 
 .about img {
-  width: 55%;
+  width: 50%;
   object-fit: cover;
   height: 100%;
 }
+
+.about img  {
+  width: 500px;
+  height: 700px;
+}  
 
 @media (max-width: 1280px) {
   .about img {
