--- a/src/pages/about/style.css
+++ b/src/pages/about/style.css
@@ -10,12 +10,12 @@ max-width: 80%;
 
 .about img {
   width: 50%;
-  object-fit: contain;
+  object-fit: cover;
   height: 100%;
 }
 
 .about img  {
-  width: 500px;
+  width: 300px;
   height: 700px;
 }  
 
